--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
 }
 
@@ -31,16 +32,20 @@ repositories {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
 
 ext {
     supportLibVersion = '23.2.1'
     versionName = '2.8.3.p1'
 }
 
+
+group = 'com.google.android.libraries.cast.companionlibrary'
+version = versionName
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-    publishNonDefault true
 
     defaultConfig {
         minSdkVersion 10
